# ocean-drive

./: .gitignore  Cargo.toml  README.md  config.toml  creds.example.toml
src/: auth.rs  config.rs  drive.rs  errors.rs  files.rs  log.rs  main.rs  parse_url.rs  readline.rs  requests.rs  setup.rs  tray.rs  updates.rs  user.rs
src/auth/: mod.rs  util.rs
src/google_drive/: errors.rs  mod.rs  types.rs
src/redirect_listener/: mod.rs  success.html
src/setup/: auth.rs  clap.rs  cli.rs  mod.rs
src/sync/: local.rs  mod.rs  remote.rs  util.rs  versions.rs
