[package]
name = "ocean-drive"
description = "Watch local files & sync them with Google Drive. Just like dropbox. But for Google Drive."
version = "0.1.0"
authors = ["undermouse"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toml = "0.4.2"
serde = "1.0"
notify = "4.0.17"
google-drive = "0.2.4"
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
urldecode = "0.1.1"
regex = "1"