[package]
name = "ocean-drive"
description = "Watch local files & sync them with Google Drive. Just like dropbox. But for Google Drive."
version = "0.1.0"
authors = ["undermouse"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toml = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
notify = "4.0.17"
clap = "2.33.3"
urlencoding = "2.1.0"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
json = "0.12.4"