[package]
name = "ocean-drive"
description = "Watch local files & sync them with Google Drive. Just like dropbox. But for Google Drive."
version = "0.1.0"
authors = ["undermouse"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toml = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
notify = "4.0.17"
clap = "2.33.3"
urlencoding = "2.1.0"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
json = "0.12.4"
home = "0.5.3"
bytes = "1.1.0"
anyhow = "1.0.44"
webbrowser = "0.5.5"
thiserror = "1.0"
